@@ -27,6 +27,7 @@ require_once 'Content/ContentGroup.php';
 require_once 'User.php';
 require_once 'GisPoint.php';
 require_once 'AbstractGeocoder.php';
+require_once 'Utils.php';
 
 /** Abstract a Node.  A Node is an actual physical transmitter.
  * @todo:  Make all the setter functions no-op if the value is the same as what
@@ -1480,6 +1481,12 @@ else
 	{
 		global $db;
 		$db->ExecSql("SELECT * FROM connections,users,nodes WHERE token_status='".TOKEN_INUSE."' AND users.user_id=connections.user_id AND nodes.node_id=connections.node_id ORDER BY timestamp_in DESC", $online_users);
+		if($online_users)
+			foreach($online_users as $connection_row)
+			{
+				$connection_row['incoming'] = Utils::convertBytesToWords($connection_row['incoming']);
+				$connection_row['outgoing'] = Utils::convertBytesToWords($connection_row['outgoing']);
+			}
 		return $online_users;
 	}
 
